# ADG

./: .gitignore  CMakeLists.txt  README.md  config.json
Inc/: Bullet.h  Config.h  Fire.h  GameHelp.h  GameScene.h  MainWindow.h  Map.h  Mary.h  Master.h  MushRoom.h  MyPushButton.h  Ui_MainWindow.h  fire.h  game_base.h  main.h  mainwindow.ui  mushroom.h  unknown.h
Maps/: 1.json
Src/: Brick.cpp  Bullet.cpp  Castle.cpp  Config.cpp  Fire.cpp  GameHelp.cpp  GamePause.cpp  GameScene.cpp  MainWindow.cpp  Map.cpp  Map.h  Mary.cpp  Master.cpp  MushRoom.cpp  MyPushButton.cpp  Pipe.cpp  fire.cpp  game_base.cpp  main.cpp  mushroom.cpp  mypushbutton.cpp  unknown.cpp
build-super_mary-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-super_mary-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QDebug.C7E63D2072BD0310.idx  QKeyEvent.18CCD400273B94CB.idx  QObject.732221B91ABE73FB.idx  QPainter.BA69C02FDD3F184D.idx  QRect.C7A6369E3B7E4616.idx  QSize.290C410C268F386C.idx  QSizeF.160A7706E1517B70.idx  QTimer.EF0F4D00632343E1.idx  QTransform.C4B00AE896980361.idx  __stddef_max_align_t.h.6C8CEDB9B9CCAD1C.idx  __wmmintrin_aes.h.F8013648A0922BD5.idx  __wmmintrin_pclmul.h.19F0CF9F01429F5C.idx  _mingw.h.CEE86047F9137794.idx  _mingw_unicode.h.85E97460D939C09F.idx  adxintrin.h.B6872AA1846602AF.idx  align.h.282D295722465DBE.idx  alloc_traits.h.3DE9C77209A6F12A.idx  allocated_ptr.h.440B379B8259C477.idx  allocator.h.CDC420F8A204DB1D.idx  ammintrin.h.624089B8C0E40612.idx  amxintrin.h.5EDD68AD3D2B6015.idx  apiset.h.011E67D985062770.idx  array.2D1B9C5D86048DBC.idx  atomic.0F2D1D3A9E555BA1.idx  atomic_base.h.4434B59F6966FB29.idx  auto_ptr.h.B2C4D73A7805467B.idx  avx2intrin.h.AF373398AB56A242.idx  avx512bf16intrin.h.C1CBCDA9A52C5174.idx  avx512bitalgintrin.h.A7E6DEED91A3C9C9.idx  avx512bwintrin.h.D8A148654025EE72.idx  avx512cdintrin.h.15D0F48E35204E66.idx  avx512dqintrin.h.E0846E5E08D38332.idx  avx512erintrin.h.5AC0D96EF4702E6C.idx  avx512fintrin.h.71802948DFEFC2AA.idx  (+319 more)
